--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,5 @@
-baseURL = 'http://example.org/'
+theme = risotto
+
+baseURL = 'https://jstockley.com/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
