--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,47 @@
-theme = 'risotto'
+theme = 'terminal'
 
-baseURL = 'https://jstockley.com/'
+baseurl = "/"
 languageCode = 'en-us'
 title = 'My New Hugo Site'
+
+[params]
+    themeColor = "blue"
+    centerTheme = true
+    showMenuItems = 5
+    
+
+[languages]
+  [languages.en]
+    languageName = "English"
+    title = "Terminal"
+    subtitle = "A simple, retro theme for Hugo"
+    owner = ""
+    keywords = ""
+    copyright = ""
+    menuMore = "Show more"
+    readMore = "Read more"
+    readOtherPosts = "Read other posts"
+    newerPosts = "Newer posts"
+    olderPosts = "Older posts"
+    missingContentMessage = "Page not found..."
+    missingBackButtonLabel = "Back to home page"
+    minuteReadingTime = "min read"
+    words = "words"
+
+    [languages.en.params.logo]
+      logoText = "Terminal"
+      logoHomeLink = "/"
+
+    [languages.en.menu]
+    [[languages.en.menu.main]]
+        identifier = "experience"
+        name = "Experience"
+        url = "/experience"
+      [[languages.en.menu.main]]
+        identifier = "education"
+        name = "Education"
+        url = "/education"
+      [[languages.en.menu.main]]
+        identifier = "projects"
+        name = "Projects"
+        url = "/projects"
